tests/lean/modBug.lean.expected.out
modBug.lean:1:32-1:64: error: application type mismatch
  Nat.zero_ne_one (Nat.mod_zero 1)
argument
  Nat.mod_zero 1
has type
  1 % 0 = 1 : Prop
but is expected to have type
  0 = 1 : Prop
